-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17
-
Component/s: client-libs
-
b21
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8278048 | 15.0.6 | Dmitry Cherepanov | P3 | Resolved | Fixed | b03 |
| JDK-8278986 | 13.0.10 | Olga Mikhaltcova | P3 | Resolved | Fixed | b04 |
| JDK-8283550 | 11.0.16 | Matthias Baesken | P3 | Resolved | Fixed | b01 |
| JDK-8266793 | 11.0.13-oracle | Philip Race | P3 | Resolved | Fixed | b01 |
| JDK-8267977 | 11.0.13 | Severin Gehwolf | P3 | Closed | Won't Fix | team |
- backported by
-
JDK-8266793 Upgrade HarfBuzz to 2.8.0
-
- Resolved
-
-
JDK-8278048 Upgrade HarfBuzz to 2.8.0
-
- Resolved
-
-
JDK-8278986 Upgrade HarfBuzz to 2.8.0
-
- Resolved
-
-
JDK-8283550 Upgrade HarfBuzz to 2.7.2
-
- Resolved
-
-
JDK-8267977 Upgrade HarfBuzz to 2.8.0
-
- Closed
-
- clones
-
JDK-8247872 Upgrade HarfBuzz to 2.7.2
-
- Resolved
-
- relates to
-
JDK-8284206 AIX build failure by JDK-8261169 requires a short-term solution
-
- Closed
-
-
JDK-8266545 8261169 broke Harfbuzz build with gcc 7 and 8
-
- Resolved
-
-
JDK-8289853 Update HarfBuzz to 4.4.1
-
- Resolved
-
-
JDK-8301998 Update HarfBuzz to 7.0.1
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/088445f9
-
Commit
openjdk/jdk13u-dev/64627b50
-
Commit
openjdk/jdk15u-dev/cc85ccb2
-
Commit
openjdk/jdk/80323b7f
-
Review
openjdk/jdk11u-dev/929
-
Review
openjdk/jdk13u-dev/306
-
Review
openjdk/jdk15u-dev/148
-
Review
openjdk/jdk/3825
-
Review
openjdk/jdk/3826