8261169: Upgrade HarfBuzz to the latest 2.8.0

Reviewed-by: mdoerr
Backport-of: 80323b7f66541e24177d02cc668a2eb9267962b9